--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -89,7 +89,7 @@
 
 *** 安装 librime
     #+HEADER: :var emacs_conf=(m/resolve "${m/xdg.conf.d}/emacs")
-    #+BEGIN_SRC shell :exports code :results none :tangle no  :eval (or (and (eq m/os 'macos) "yes") "never") :comments link
+    #+BEGIN_SRC shell :eval (or (and (eq m/os 'macos) "yes") "never") :shebang #!/bin/bash :exports none :tangle no :results output silent :noweb yes :prologue "exec 2>&1" :epilogue ":" :comments link
       cd ${emacs_conf}/3rdparty/librime
       git submodule update --init
       export LIBRARY_PATH=${LIBRARY_PATH}:/usr/local/opt/icu4c/lib
@@ -128,14 +128,17 @@
 
 *** 修复 liberime-core.so 的链接的问题（@rpath librime not found）
 
-    #+HEADER: :var erime_path=(m/resolve "${m/xdg.conf.d}/emacs/3rdparty/liberime/src")
-    #+HEADER: :var rpath=(m/resolve "${m/xdg.conf.d}/emacs/3rdparty/librime/build/lib/Release") 
-    #+BEGIN_SRC shell :eval (or (and (eq m/os 'macos) "yes") "never") :exports code :results none :noweb yes 
-      echo ${rpath}
-      echo ${erime_path}
-      (otool -l ${erime_path}/liberime-core.so | grep "${rpath}") || install_name_tool -add_rpath ${rpath} ${erime_path}/liberime-core.so
+    #+HEADER: :var erime_path=(m/resolve "${m/xdg.conf.d}/emacs/3rdparty/liberime")
+    #+HEADER: :var rime_path=(m/resolve "${m/xdg.conf.d}/emacs/3rdparty/librime")
+    #+HEADER: :var emacs_major=(format "%d" emacs-major-version)
+    #+BEGIN_SRC shell :eval (or (and (eq m/os 'macos) "yes") "never") :shebang #!/bin/bash :exports none :tangle no :results output silent :noweb yes :prologue "exec 2>&1" :epilogue ":" :comments link
+      export RIME_PATH=${rime_path}
+      export EMACS_MAJOR_VERSION=${emacs_major}
+      cd ${erime_path}
+      make
+      (otool -l ${erime_path}/src/liberime-core.so | grep "${rime_path}/build/lib/Release") || install_name_tool -add_rpath "${rime_path}/build/lib/Release" ${erime_path}/src/liberime-core.so
     #+END_SRC
-    
+
 *** liberime 配置文件 
     #+BEGIN_SRC yaml :tangle (m/resolve "${m/xdg.conf.d}/emacs/rime/default.custom.yaml") :noweb yes :eval never :exports code
       patch:
