--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -24,7 +24,7 @@
       export VIMINIT='let $MYVIMRC="$XDG_CONFIG_HOME/vim/vimrc" | source $MYVIMRC'
       export VIMDOTDIR="$XDG_CONFIG_HOME/vim"
 
-      export LESSHISTFILE="${XDG_CONFIG_HOME}/less/history"
+      export LESSHISTFILE="${XDG_DATA_HOME}/less/history"
       export LESSKEY="${XDG_CONFIG_HOME}/less/keys"
 
       export GEM_SPEC_CACHE=${XDG_CACHE_HOME}/rubygems/cache
@@ -35,12 +35,17 @@
       export ZDOTDIR="${XDG_CONFIG_HOME}/zsh"
     #+END_SRC
 
+*** zsh xdg
+    #+BEGIN_SRC shell :eval yes :shebang #!/bin/bash :exports none :tangle no :results output silent :noweb yes :prologue "exec 2>&1" :epilogue ":" :comments link
+      mkdir -p ${XDG_DATA_HOME}/{zsh,less}
+    #+END_SRC
 *** zshrc 配置
     #+BEGIN_SRC shell :tangle (m/resolve "${m/xdg.conf.d}/zsh/.zshrc") :eval never :exports code :comments link
       export ZPLUG_HOME=${XDG_CONFIG_HOME}/zsh/zplug
       export ZPLUG_REPOS=${XDG_CONFIG_HOME}/zplug/repos
       export ZPLUG_CACHE_DIR=${XDG_CACHE_HOME}/zplug
-      
+      export HISTFILE=${XDG_DATA_HOME}/zsh/history
+
 
       [[ $TERM == "tramp" ]] && unsetopt zle && PS1='$ '&& return
       for file in $(find ${XDG_CONFIG_HOME}/zsh/init -name "*.zsh"|sort); do
