--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -35,9 +35,9 @@
       export ZDOTDIR="${XDG_CONFIG_HOME}/zsh"
     #+END_SRC
 
-*** zsh xdg
+*** zsh xdg 配置
     #+BEGIN_SRC shell :eval yes :shebang #!/bin/bash :exports none :tangle no :results output silent :noweb yes :prologue "exec 2>&1" :epilogue ":" :comments link
-      mkdir -p ${XDG_DATA_HOME}/{zsh,less}
+      mkdir -p ${XDG_DATA_HOME}/{zsh,less,git}
     #+END_SRC
 *** zshrc 配置
     #+BEGIN_SRC shell :tangle (m/resolve "${m/xdg.conf.d}/zsh/.zshrc") :eval never :exports code :comments link
